Refactored Option and Result and provided more documentation