@@ -20,5 +20,10 @@ dependencies {
 }
 
 test {
+    jvmArgs(['--enable-preview'])
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
 }
